--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <a href="#">Hendrix</a>
             </div>
             <div class="navbar-container-nav">
+                <input type="checkbox" id="control">
+                    <label for="control" class="control">
+                        <i class="fa-solid fa-bars bars"></i>
+                    </label>
                 <ul>
                     <li><a href="#about">about</a></li>
                     <li><a href="#service">what I Do</a></li>
