--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <label for="control" class="control">
                         <i class="fa-solid fa-bars bars"></i>
                     </label>
-                <ul>
+                <ul class="links">
                     <li><a href="#about">about</a></li>
                     <li><a href="#service">what I Do</a></li>
                     <li><a href="#works">works</a></li>
