--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="utilities.css">
     <link rel="stylesheet" href="responsive.css">
-    <title>Hendrix - Personal Portfolio HTML Template</title>
+    <title>Farid - Personal Portfolio HTML Template</title>
 </head>
 <body>
     <!--navbar start-->
@@ -23,7 +23,7 @@
         <div class="navbar-positions">
         <div class="navbar-container">
             <div class="navbar-container-logo">
-                <a href="#">Hendrix</a>
+                <a href="#">Farid</a>
             </div>
             <div class="navbar-container-nav">
                 <input type="checkbox" id="control">
@@ -214,7 +214,7 @@
             <a href=""><i class="fa-brands fa-google-plus"></i></a>
         </div>
         <div class="footer flex jcc">
-            <p>© 2018 Hendrix. all rights reserved.</p>
+            <p>© 2022 Farid. all rights reserved.</p>
         </div>
     </div>
 </body>
